Filtriranje 1. del (stranke, projekti)
Na novo oblikovane tabele prikaza strank in projektov.
Filtriranje po zahtevanih kriterijih.

--- a/stranke.ui
+++ b/stranke.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>685</width>
+    <width>719</width>
     <height>699</height>
    </rect>
   </property>
@@ -64,7 +64,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tab_stranka">
      <property name="currentIndex">
-      <number>2</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="tab_podatki">
       <attribute name="title">
@@ -81,7 +81,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>625</width>
+            <width>659</width>
             <height>892</height>
            </rect>
           </property>
@@ -711,7 +711,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>643</width>
+            <width>677</width>
             <height>591</height>
            </rect>
           </property>
@@ -1913,11 +1913,11 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>694</width>
-            <height>573</height>
+            <width>677</width>
+            <height>591</height>
            </rect>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_14">
+          <layout class="QVBoxLayout" name="verticalLayout_6">
            <item>
             <widget class="QGroupBox" name="groupBox_5">
              <property name="title">
@@ -1927,7 +1927,48 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_10">
                 <item>
-                 <spacer name="horizontalSpacer_9">
+                 <layout class="QGridLayout" name="gridLayout_17">
+                  <item row="0" column="1">
+                   <widget class="QLabel" name="label_45">
+                    <property name="text">
+                     <string>Leto pričetka</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="2">
+                   <widget class="QLabel" name="label_46">
+                    <property name="text">
+                     <string>Status projekta</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="0">
+                   <widget class="QLabel" name="label_44">
+                    <property name="text">
+                     <string>Mesec pričetka</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="1" column="0">
+                   <widget class="QComboBox" name="cb_mesec"/>
+                  </item>
+                  <item row="1" column="1">
+                   <widget class="QComboBox" name="cb_leto"/>
+                  </item>
+                  <item row="1" column="2">
+                   <widget class="QComboBox" name="cb_projekt">
+                    <property name="minimumSize">
+                     <size>
+                      <width>150</width>
+                      <height>0</height>
+                     </size>
+                    </property>
+                   </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_15">
                   <property name="orientation">
                    <enum>Qt::Horizontal</enum>
                   </property>
@@ -1946,46 +1987,33 @@
                   </property>
                  </widget>
                 </item>
-                <item>
-                 <spacer name="horizontalSpacer_15">
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                 </spacer>
-                </item>
                </layout>
               </item>
-              <item>
-               <widget class="QTableWidget" name="tbl_projekti">
-                <property name="minimumSize">
-                 <size>
-                  <width>650</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="editTriggers">
-                 <set>QAbstractItemView::NoEditTriggers</set>
-                </property>
-                <property name="selectionBehavior">
-                 <enum>QAbstractItemView::SelectRows</enum>
-                </property>
-                <property name="sortingEnabled">
-                 <bool>true</bool>
-                </property>
-                <column>
-                 <property name="text">
-                  <string>tbl_projekti</string>
-                 </property>
-                </column>
-               </widget>
-              </item>
              </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="QTableWidget" name="tbl_projekti">
+             <property name="minimumSize">
+              <size>
+               <width>650</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="editTriggers">
+              <set>QAbstractItemView::NoEditTriggers</set>
+             </property>
+             <property name="selectionBehavior">
+              <enum>QAbstractItemView::SelectRows</enum>
+             </property>
+             <property name="sortingEnabled">
+              <bool>true</bool>
+             </property>
+             <column>
+              <property name="text">
+               <string>tbl_projekti</string>
+              </property>
+             </column>
             </widget>
            </item>
           </layout>
@@ -2058,7 +2086,6 @@
   <tabstop>cb_podrazitev_zapleti</tabstop>
   <tabstop>txt_podrazitev_zapleti</tabstop>
   <tabstop>scrollArea_2</tabstop>
-  <tabstop>tbl_projekti</tabstop>
   <tabstop>btn_novprojekt</tabstop>
  </tabstops>
  <resources/>
