--- a/wid_stranke.ui
+++ b/wid_stranke.ui
@@ -16,9 +16,27 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QCheckBox" name="cb_fizicna">
+         <property name="text">
+          <string>Fizične osebe</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_pravna">
+         <property name="text">
+          <string>Pravne osebe</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
@@ -47,14 +65,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="btn_min">
-       <property name="text">
-        <string>Minimalno</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_2">
+      <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -68,7 +79,7 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QTableWidget" name="tbl_stranke">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
