--- a/wid_potninalogi.ui
+++ b/wid_potninalogi.ui
@@ -16,9 +16,73 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Mesec izdaje</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Namen</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="5">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Prevozno sredstvo</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Leto izdaje</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Kraj</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QComboBox" name="cb_mesec"/>
+       </item>
+       <item row="1" column="2">
+        <widget class="QComboBox" name="cb_namen"/>
+       </item>
+       <item row="1" column="4">
+        <widget class="QComboBox" name="cb_kraj"/>
+       </item>
+       <item row="1" column="5">
+        <widget class="QComboBox" name="cb_prevoz"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="cb_leto"/>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Stranka</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="QComboBox" name="cb_stranka"/>
+       </item>
+      </layout>
+     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
@@ -50,13 +114,6 @@
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="chk_min">
-       <property name="text">
-        <string>Minimalno</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -71,7 +128,7 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QTableWidget" name="tbl_potninalogi">
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
