Program iz predračuna tvori račun in predplačilni račun
Ko vnesemo predračun, ga običajno pošljemo stranki. Stranka ga potrdi,
plača avans (če je), mi pa pričnemo z delom. V kolikor je avans prisoten,
moramo ob zaključku koledarskega meseca izstaviti predplačilni račun,
ob koncu dela pa še končni račun.
Program sedaj omogoča avtomatsko tvorbo računa in predplačilnega računa iz
predračuna. Omogoča urejanje vsakega posebej. Ob brisanju posameznih
tipov računa izbriše tudi in samo njihova opravila. Sproti računa želene
zneske.
TODO:
- ob POPRAVLJENEM računu le-ta ne osveži tabele računov,
- popravljamo lahko vse tipe računov:
	- predplačilni račun izhaja direktno iz predračuna in ga ne smemo
	  popraviti,
	- ko zaključimo predračun in iz njega tvorimo ostale tipe, le-tega
	  ne bi smeli več popravljati,
- program še ne ve, kaj pomeni potrjen predračun in plačan avans,
- tiskanje računov še ni izpopolnjeno do uporabnosti - nove funkcije niso
dodane.

--- a/opravila.ui
+++ b/opravila.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>846</width>
+    <width>912</width>
     <height>757</height>
    </rect>
   </property>
@@ -35,23 +35,35 @@
          <layout class="QHBoxLayout" name="horizontalLayout_18">
           <item>
            <layout class="QGridLayout" name="gridLayout_7">
-            <item row="0" column="2">
-             <widget class="QLabel" name="label_47">
+            <item row="0" column="1">
+             <widget class="QLabel" name="label_46">
               <property name="text">
-               <string>Projekt</string>
+               <string>Stranka</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
               </property>
              </widget>
             </item>
-            <item row="0" column="3">
-             <widget class="QLabel" name="label_48">
-              <property name="text">
-               <string>Račun</string>
+            <item row="1" column="0">
+             <widget class="QLineEdit" name="txt_id">
+              <property name="enabled">
+               <bool>false</bool>
               </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
+              <property name="minimumSize">
+               <size>
+                <width>20</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>100</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>txt_id</string>
               </property>
              </widget>
             </item>
@@ -86,7 +98,7 @@
                 </property>
                 <property name="minimumSize">
                  <size>
-                  <width>200</width>
+                  <width>150</width>
                   <height>0</height>
                  </size>
                 </property>
@@ -97,10 +109,17 @@
               </item>
              </layout>
             </item>
-            <item row="0" column="1">
-             <widget class="QLabel" name="label_46">
+            <item row="0" column="0">
+             <widget class="QLabel" name="label_49">
               <property name="text">
-               <string>Stranka</string>
+               <string>Številka opravila</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLabel" name="label_47">
+              <property name="text">
+               <string>Projekt</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -138,7 +157,7 @@
                 </property>
                 <property name="minimumSize">
                  <size>
-                  <width>200</width>
+                  <width>150</width>
                   <height>0</height>
                  </size>
                 </property>
@@ -180,7 +199,7 @@
                 </property>
                 <property name="minimumSize">
                  <size>
-                  <width>300</width>
+                  <width>250</width>
                   <height>0</height>
                  </size>
                 </property>
@@ -191,28 +210,67 @@
               </item>
              </layout>
             </item>
-            <item row="1" column="0">
-             <widget class="QLineEdit" name="txt_id">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>50</width>
-                <height>0</height>
-               </size>
-              </property>
+            <item row="0" column="3">
+             <widget class="QLabel" name="label_48">
               <property name="text">
-               <string>txt_id</string>
+               <string>Račun</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
             </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_49">
+            <item row="0" column="4">
+             <widget class="QLabel" name="label_50">
               <property name="text">
-               <string>Številka opravila</string>
+               <string>Tip računa</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
+            </item>
+            <item row="1" column="4">
+             <layout class="QHBoxLayout" name="horizontalLayout_19">
+              <item>
+               <widget class="QLineEdit" name="txt_id_tip">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>10</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>10</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>txt_id_tip</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLineEdit" name="txt_tip">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>txt_tip</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </item>
