--- a/racun.ui
+++ b/racun.ui
@@ -20,7 +20,7 @@
    <item>
     <widget class="QTabWidget" name="tab_racuni">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_podatki">
       <attribute name="title">
@@ -75,6 +75,26 @@
             <widget class="QRadioButton" name="rb_predracun">
              <property name="text">
               <string>Predračun</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_11">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="rb_predplacilo">
+             <property name="text">
+              <string>Predplačilo</string>
              </property>
             </widget>
            </item>
@@ -387,7 +407,7 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="0">
+         <item row="7" column="0">
           <spacer name="verticalSpacer_3">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -416,6 +436,20 @@
            </property>
            <property name="calendarPopup">
             <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="0">
+          <widget class="QLabel" name="label_20">
+           <property name="text">
+            <string>Odstotek avansa</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QLineEdit" name="txt_odstotek_avansa">
+           <property name="text">
+            <string>txt_odstotek_avansa</string>
            </property>
           </widget>
          </item>
@@ -548,7 +582,7 @@
           <item row="0" column="0">
            <widget class="QLabel" name="label_14">
             <property name="text">
-             <string>Plačano</string>
+             <string>Avans</string>
             </property>
            </widget>
           </item>
@@ -589,6 +623,9 @@
           </item>
           <item row="1" column="0">
            <widget class="QLineEdit" name="txt_avans">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
             <property name="maximumSize">
              <size>
               <width>200</width>
