Pri projektu in računih je možno dodati opombe
Pri projektu je možno dajati opombe. Le-te se navezujejo na sodelovanje
s stranko tekom projekta (dogovori, spremembe, klicanje med vikendom,
čakanje, držanje rokov, ...). Prav tako prikaže opombe, navedene pri
računih in predračunih.
Pri predračunu, računu je možno dodati opombe. Tu se navezujejo predvsem
na spremembe glede postavk (pred)računa. Pri predračunu se navajajo
spremembe, zakaj zavrnjen, zakaj potrjen, kaj v osnovi, kaj se je dodalo.
Pri računu se dodajajo predvsem opombe, ki razložijo razlike med
predračunom in računom. Primer: naknadno je stranka želela novo storitev,
cena je bila povedana ustno oz. pisno prek mailov, avans je bil že plačan.
Ali pa ko so bile analize narejene, stranka ugotovi, da je pozabila neke
parametre, podala napačne podatke. Tako se število ur praktično podvoji.

--- a/projekti.ui
+++ b/projekti.ui
@@ -23,7 +23,7 @@
    <item>
     <widget class="QTabWidget" name="tab_projekti">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -377,6 +377,15 @@
            <height>0</height>
           </size>
          </property>
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SingleSelection</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
          <column>
           <property name="text">
            <string>tbl_zapisi</string>
@@ -400,6 +409,13 @@
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_5">
          <item>
+          <widget class="QLineEdit" name="txt_id_zapisa">
+           <property name="text">
+            <string>txt_id_zapisa</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLabel" name="label_48">
            <property name="text">
             <string>Datum in ura zapisa</string>
@@ -407,7 +423,11 @@
           </widget>
          </item>
          <item>
-          <widget class="QDateTimeEdit" name="txt_datum_zapisa"/>
+          <widget class="QDateTimeEdit" name="txt_datum_zapisa">
+           <property name="displayFormat">
+            <string>dd.MM.yyyy HH:mm</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_49">
@@ -459,9 +479,16 @@
             </spacer>
            </item>
            <item>
-            <widget class="QPushButton" name="txt_vnesi_zapis">
+            <widget class="QPushButton" name="btn_vnesi_zapis">
              <property name="text">
               <string>Vnesi zapis</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btn_pocisti">
+             <property name="text">
+              <string>Počisti</string>
              </property>
             </widget>
            </item>
