--- a/racun.ui
+++ b/racun.ui
@@ -500,7 +500,14 @@
           </widget>
          </item>
          <item row="8" column="1">
-          <widget class="QDateEdit" name="txt_datum_placila_avansa"/>
+          <widget class="QDateEdit" name="txt_datum_placila_avansa">
+           <property name="displayFormat">
+            <string>dd.MM.yyyy</string>
+           </property>
+           <property name="calendarPopup">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
