Tiskanje potnih nalogov
Tiskanje potnih nalogov v veliki meri deluje. Tiska se lahko v glavnem
oknu, kjer je možnost masovnega tiskanja brez da bi program karkoli
spraševal, ter možnost filtriranja potnih nalogov, ki se bodo natisnili.
Prav tako se lahko tiska posamezne potne naloge v oknu s podrobnostmi,
kjer pa nas pred vsakim tiskanjem program povpraša o podrobnostih.
Za razmislek: Tiskanje v PDF?
TODO: 	določeno računanje je še nepopolno, a za trenutne razmere dovolj
dobro,
	ni sive podlage v nekaterih tabelah,
	naslovi niso večji kot ostalo besedilo.

--- a/potninalogi.ui
+++ b/potninalogi.ui
@@ -1132,7 +1132,7 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>Izvozi CSV</string>
+        <string>Natisni</string>
        </property>
       </widget>
      </item>
