Osnovno tiskanje prejetega računa
Tu gre pravzaprav za nabor informacij v nekem preglednem formatu. Bolj ali
ne gre za pripravo terena za bolj konkretno tiskanje v nekem prihodnjem
času.
Commit tudi vsebuje droben popravek pri tiskanju potnih nalogov, sprememba
naslova okna.
Delno zadovolji #23, #3

--- a/prejetiracuni.ui
+++ b/prejetiracuni.ui
@@ -716,7 +716,7 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>Izpiši kot CSV</string>
+        <string>Natisni</string>
        </property>
       </widget>
      </item>
