Tiskanje predračunov iz okna predračuna
Program (končno) zna tiskati predračune. Preračuna podatke iz baze in
jih uredi v obliko, kakršno je zahteval naročnik. Na vrhu doda logotip,
ki je trenutno statičen, a bo kmalu prejel možnost namestitve v
nastavitvah za podjetje.
closes #23
delno reši #3

--- a/racun.ui
+++ b/racun.ui
@@ -940,7 +940,7 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>Izpiši CSV</string>
+        <string>Natisni</string>
        </property>
       </widget>
      </item>
