--- a/opravila.ui
+++ b/opravila.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>912</width>
+    <width>930</width>
     <height>757</height>
    </rect>
   </property>
@@ -298,7 +298,7 @@
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <layout class="QGridLayout" name="gridLayout">
-            <item row="0" column="3">
+            <item row="0" column="4">
              <widget class="QLabel" name="label_4">
               <property name="text">
                <string>DDV</string>
@@ -308,7 +308,7 @@
               </property>
              </widget>
             </item>
-            <item row="0" column="4">
+            <item row="0" column="5">
              <widget class="QLabel" name="label_5">
               <property name="text">
                <string>Urna postavka z DDV</string>
@@ -338,7 +338,7 @@
               </property>
              </widget>
             </item>
-            <item row="0" column="2">
+            <item row="0" column="3">
              <widget class="QLabel" name="label_3">
               <property name="text">
                <string>Urna postavka brez DDV</string>
@@ -346,21 +346,6 @@
               <property name="alignment">
                <set>Qt::AlignCenter</set>
               </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QComboBox" name="txt_skupina">
-              <property name="minimumSize">
-               <size>
-                <width>200</width>
-                <height>0</height>
-               </size>
-              </property>
-              <item>
-               <property name="text">
-                <string>txt_skupina</string>
-               </property>
-              </item>
              </widget>
             </item>
             <item row="1" column="1">
@@ -378,7 +363,22 @@
               </item>
              </widget>
             </item>
-            <item row="1" column="2">
+            <item row="1" column="0">
+             <widget class="QComboBox" name="txt_skupina">
+              <property name="minimumSize">
+               <size>
+                <width>200</width>
+                <height>0</height>
+               </size>
+              </property>
+              <item>
+               <property name="text">
+                <string>txt_skupina</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="1" column="3">
              <widget class="QLineEdit" name="txt_urna_postavka_brez_ddv">
               <property name="maximumSize">
                <size>
@@ -391,7 +391,7 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="3">
+            <item row="1" column="4">
              <widget class="QComboBox" name="txt_ddv">
               <property name="maximumSize">
                <size>
@@ -406,7 +406,7 @@
               </item>
              </widget>
             </item>
-            <item row="1" column="4">
+            <item row="1" column="5">
              <widget class="QLineEdit" name="txt_urna_postavka">
               <property name="maximumSize">
                <size>
@@ -417,6 +417,22 @@
               <property name="text">
                <string>txt_urna_postavka</string>
               </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLabel" name="label_51">
+              <property name="text">
+               <string>Enota</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QComboBox" name="txt_enota">
+              <item>
+               <property name="text">
+                <string>txt_enota</string>
+               </property>
+              </item>
              </widget>
             </item>
            </layout>
@@ -612,6 +628,22 @@
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
            <layout class="QGridLayout" name="gridLayout_3">
+            <item row="1" column="4">
+             <widget class="QLineEdit" name="txt_nova_urna_postavka">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>100</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>txt_nova_urna_postavka</string>
+              </property>
+             </widget>
+            </item>
             <item row="0" column="4">
              <widget class="QLabel" name="label_15">
               <property name="text">
@@ -639,22 +671,6 @@
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="4">
-             <widget class="QLineEdit" name="txt_nova_urna_postavka">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>100</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>txt_nova_urna_postavka</string>
               </property>
              </widget>
             </item>
